# python-api-architecture-sample

./: .gitignore  Pipfile  README.md  app.py  requirements.txt  schema.yml  setup.cfg
.github/workflows/: test.yml
fastapi_app/: Dockerfile  main.py  pyproject.toml
fastapi_app/src/inference/: app.py  helper.py
fastapi_app/src/inference/application/: controller.py  exceptions.py
fastapi_app/src/inference/domain/: content.py  inference.py  repository.py  service.py
fastapi_app/src/inference/infrastructure/: proxy.py
responder/: regist_log.py
responder/tests/: __test_api.py
responder/tests/domain/: test_report_service.py
responder_app/: Pipfile  inference.db  pytest.ini  schema.sql  schema.yml  set_env.sh
responder_app/src/inference/helper/: api_module.py
responder_app/systemd/: image-inference.service
responder_app/tests/application/: test_inference_controller.py
src/application/: exception.py  inference_controller.py  request_schema.py
src/controller/: inference_controller.py
src/domain/: image.py  inference.py
src/domain/object/: content.py  image.py  inference.py
src/domain/repository/: inference_repository.py  report_repository.py
src/domain/service/: inference_service.py  report_service.py
src/driver/: inference_driver.py
src/helper/: api_module.py  di_module.py
src/inference/application/: inference_controller.py  request_schema.py
src/inference/helper/: api_module.py  di_module.py
src/infrastructure/repository/: classifier.py  detector.py  exceptions.py  inference_repository.py  report_repository.py
src/interactor/: inference_interactor.py
src/interface/: inference_driver.py  inference_repository.py  inference_usecase.py
src/repository/: inference_repository.py
src/resource/: inference_resource.py
src/service/: inference_service.py
tests/: test_api.py
tests/domain/: test_inference_service.py  test_report_service.py
(+17 files in other folders)
