[metadata]
name = image-inference-api
version = 0.0.1

[options]
package_dir=
    =src
packages=find
install_requires=
    injector==0.18.3
    requests==2.24.0
    responder==2.0.5
    torch==1.4.0
    torchvision==0.5.0

[options.packages.find]
where=src

[flake8]
ignore=[E501]
max-line-length=120