[metadata]
name = image-inference-api
version = 1.0.0

[options]
python_requires = >=3.7
zip_safe = False
packages = find:
package_dir =
    = src
#install_requires =
include_package_data = True

[options.extras_require]
dev = pytest

[options.packages.find]
where = src
exclude = tests

[options.entry_points]
console_scripts =
    inference = bin.app:main

[flake8]
ignore = [E501]
max-line-length = 120